Level3/artifacts/nodeSelector.yaml
# kubectl label nodes node1 criticalApp=yes
apiVersion: v1
kind: Pod
metadata:
  name: isdemo3
  namespace: development
  labels:
    environment: development
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx:1.14.2
    ports:
    - containerPort: 80
    imagePullPolicy: Always
    nodeSelector:
      agentpool: agentpool
