Level3/artifacts/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: curl
spec:
  selector:
    matchLabels:
      app: curl 
  serviceName: "curl"
  replicas: 3 
  template:
    metadata:
      labels:
        app: curl 
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: curl
        image: curlimages/curl
        command: ["sleep"]
        args: ["1000"]
        ports:
        - containerPort: 80
          name: web
